--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,12 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.19.2 <3.0.0'
 
-
 dependencies:
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
-
   go_router: ^6.2.0
   google_fonts: ^4.0.3
   google_fonts_arabic: ^1.1.7
