--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   font_awesome_flutter: ^10.4.0
+  get_it: ^7.2.0
   go_router: ^6.2.0
   google_fonts: ^4.0.3
   google_fonts_arabic: ^1.1.7
