--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.0.1
@@ -29,11 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_spinkit: ^5.1.0
   font_awesome_flutter: ^10.4.0
   get_it: ^7.2.0
   go_router: ^6.2.0
   google_fonts: ^4.0.3
   google_fonts_arabic: ^1.1.7
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
